--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "@radix-ui/react-select": "^2.2.6",
     "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.542.0",
     "next": "15.5.0",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^4.1.1"
   },
   "devDependencies": {
