Initial web socket connection implementation

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL="postgresql://test_user:test_password@localhost:3333/test_db?schema=public"
-REALTIME_CHAT_API_URL="YOUR_API_URL"
+REALTIME_CHAT_API_URL="http://localhost:2374"
 NEXTAUTH_SECRET="YOUR_SECRET"
+REALTIME_CHAT_WEB_SOCKET_URL="http://localhost:2374/api/ws/chat-room"
