Add prisma database implementation to nextjs

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,14 @@
+# postgres
+POSTGRESQL_USERNAME=""
+POSTGRESQL_PASSWORD=""
+POSTGRESQL_DATABASE=""
+DB_HOST_PORT=""
+
+# prisma
 DATABASE_URL="postgresql://test_user:test_password@localhost:3333/test_db?schema=public"
-REALTIME_CHAT_API_URL="http://localhost:2374"
+
+# next auth
 NEXTAUTH_SECRET="YOUR_SECRET"
-REALTIME_CHAT_WEB_SOCKET_URL="http://localhost:2374/api/ws/chat-room"
+
+# web socket 
+NEXT_PUBLIC_REALTIME_CHAT_WEB_SOCKET_URL="http://localhost:2374"
