add postgres volume folder

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ POSTGRESQL_USERNAME=""
 POSTGRESQL_PASSWORD=""
 POSTGRESQL_DATABASE=""
 DB_HOST_PORT=""
+POSTGRESQL_VOLUME_DIR="/pg/data"
 
 # prisma
 DATABASE_URL="postgresql://test_user:test_password@localhost:3333/test_db?schema=public"
